--- a/css/style.css
+++ b/css/style.css
@@ -232,34 +232,11 @@ button a:hover{
     opacity: .7;
 }
 
-.caseImg{
-    max-height: 35%;
-}
-
-#case4bg
-    .caseImg{
-    max-height: 50%;
-}
-
-#case6bg
-    .caseImg{
-    max-height: 45%;
-}
-
 .caseImgCont{
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-#case5bg
-    .caseImg{
-    max-height: 60%;
-}
-
-#case8bg
-    .caseImg{
-        margin-top: 55px;
+    height: 140px;
 }
 
 #case1bg{
@@ -294,6 +271,18 @@ button a:hover{
     background-image: url(../images/cases/8_itchy.png);
 }
 
+#case8bg{
+    background-image: url(../images/cases/8_itchy.png);
+}
+
+#case9bg{
+    background-image: url(../images/cases/9_magenta.png);
+}
+
+#case10bg{
+    background-image: url(../images/cases/10_audible.png);
+}
+
 .caseTxt{
     font-family: 'Archivo';
     font-style: italic;
@@ -301,32 +290,13 @@ button a:hover{
     font-size: 18px;
     color: #ffffff;
     text-align: center;
-    margin-top: 35px;
-}
-
-#case1bg
-    .caseTxt{
-        margin-top: 0;
-}
-
-#case4bg
-    .caseTxt{
-        margin-top: 5px;
-}
-
-#case5bg
-    .caseTxt{
-        margin-top: 0;
-}
-
-#case8bg
-    .caseTxt{
-        margin-top: 10px;
+    margin-top: 30px;
 }
 
 #clientsRes img{
     display: block;
     margin: 0 auto;
+    width: 100%;
 }
 
 .knowCont{
@@ -449,7 +419,58 @@ button a:hover{
     color: #FFAA6D;
 }
 
-@media only screen and (min-width: 1440px) {
+#clientsDesk img{
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+}
+
+#clientsRes{
+    display: none;
+}
+
+.caseImg{
+    width: 35%;
+}
+
+#case9bg .caseImg, #case10bg .caseImg{
+    width: 50%;
+}
+
+#case3bg .caseImg{
+    width: 30%;
+}
+
+.caseBtnCont{
+    display: block;
+    margin: 0 auto;
+    width: 158px;
+    height: 37px;
+}
+
+.caseBtnCont a{
+    border: none;
+    color: #ffffff !important;
+    background-color: #AC6730;
+    border-radius: 5px;
+    text-decoration: none;
+    display: flex;
+    padding: 10px;
+    justify-content: center;
+    font-size: 16px;
+}
+
+@media only screen and (max-width: 425px){
+    #clientsDesk{
+        display: none;
+    }
+
+    #clientsRes{
+        display: block;
+    }
+}
+
+@media only screen and (min-width: 1025px) {
     .headerContRes, .footerContRes{
         display: none;
     }
@@ -469,14 +490,6 @@ button a:hover{
 
     .bannerPrinc{
         padding-top: 168px;
-    }
-
-    #clientsDesk{
-        display: block;
-    }
-
-    #clientsRes{
-        display: none;
     }
 
     .aboutTitle{
@@ -509,12 +522,12 @@ button a:hover{
         height: 415px;
     }
     
-    #case1bg, #case3bg, #case5bg, #case7bg{
+    #case1bg, #case3bg, #case5bg, #case7bg, #case9bg{
         margin-left: 90px;
         margin-right: 45px;
     }
 
-    #case2bg, #case4bg, #case6bg, #case8bg{
+    #case2bg, #case4bg, #case6bg, #case8bg, #case10bg{
         margin-right: 90px;
         margin-left: 45px;
     }   
@@ -563,18 +576,19 @@ button a:hover{
         display: block;
         padding-top: 100px;
     }
+
+    .caseTxt{
+        font-size: 15px;
+    }
+
 }
 
-@media only screen and (max-width: 1439px) {
+@media only screen and (max-width: 1025px) {
     .headerDesk{
         display: none;
     }
 
     .footerContDesk{
-        display: none;
-    }
-
-    #clientsDesk{
         display: none;
     }
 
